manifests/prometheus/statefulset.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: prometheus-core
  namespace: monitoring
  labels:
    app: prometheus
    component: core
spec:
  selector:
    matchLabels:
      app: prometheus
      component: core
  serviceName: "prometheus"
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      name: prometheus-main
      labels:
        app: prometheus
        component: core
    spec:
      serviceAccountName: prometheus-k8s
      terminationGracePeriodSeconds: 10
      containers:
      - name: prometheus
        image: prom/prometheus:v1.7.0
        args:
          - '-storage.local.retention=8760h'
          - '-storage.local.memory-chunks=500000'
          - '-config.file=/etc/prometheus/prometheus.yaml'
          - '-alertmanager.url=http://alertmanager:9093/'
        ports:
        - name: webui
          containerPort: 9090
        resources:
          requests:
            cpu: 500m
            memory: 500M
          limits:
            cpu: 500m
            memory: 500M
        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus
        - name: rules-volume
          mountPath: /etc/prometheus-rules
        - name: niiinja-data
          mountPath: /prometheus/data
          subPath: prometheus-data
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-core
      - name: rules-volume
        configMap:
          name: prometheus-rules
      - name: niiinja-data
        persistentVolumeClaim:
          claimName: niiinja-data
  volumeClaimTemplates:
  - metadata:
      name: niiinja-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 400Gi
