manifests/prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.global-static-ip-name: niiinja-grafana
spec:
  backend:
    serviceName: grafana
    servicePort: 80
